fix: overlay button visibility

--- a/style.css
+++ b/style.css
@@ -79,14 +79,18 @@ button:nth-child(2) {
     height: 100%;
     z-index: 9;
     background-color: rgba(0, 0, 0, .5);
+
 }
-.overlay button{
-    background-image: url("Images/cancel.png");
+#overlay button{
+    background-image: url("Images/cancel.png") !important;
     position: absolute;
     left: 10px;
     top: 10px;
     z-index: 10;
-
+    display: none;
+}
+#overlay.overlay button{
+    display: initial;
 }
 
 
